--- a/DiscountDemo/DiscountDemo.csproj
+++ b/DiscountDemo/DiscountDemo.csproj
@@ -16,6 +16,14 @@
         <Content Include="products3.json">
           <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </Content>
+        <None Remove="products5.json" />
+        <Content Include="products5.json">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
+        <None Remove="products5-1.json" />
+        <Content Include="products5-1.json">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
     </ItemGroup>
 
 </Project>
