--- a/DiscountDemo/DiscountDemo.csproj
+++ b/DiscountDemo/DiscountDemo.csproj
@@ -24,6 +24,10 @@
         <Content Include="products5-1.json">
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </Content>
+        <None Remove="products4.json" />
+        <Content Include="products4.json">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
     </ItemGroup>
 
 </Project>
